--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Snake</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <canvas id="canvas" width="640" height="480"></canvas>
+    <button>Start/Restart</button>
+    <div class="score">
+      Score: <span>0</span>
+    </div>
+    <canvas id="canvas" width="200" height="200"></canvas>
   </body>
 </html>
