--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Start/Restart</button>
+    <button id="btn">Start/Restart</button>
     <div class="score">
       Score: <span>0</span>
     </div>
     <canvas id="canvas" width="200" height="200"></canvas>
+    <script src="app.js"></script>
   </body>
 </html>
