--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="score">
       Score: <span>0</span>
     </div>
-    
+    <div id="board"></div>
     <script src="app.js"></script>
   </body>
 </html>
